--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
    /* General Section Styling */
   
 .para {
-  color: #364d59;
+  color: #bfa350;
 }
 .overlay {
   position: absolute;
@@ -327,7 +327,7 @@ ul li {
 }
 
 .btn {
-  background: #6fb4cf;
+  background: #bfa350;
   color: #000;
   padding: 10px 20px;
   border: none;
@@ -948,7 +948,7 @@ ul li {
 
 <body class="index-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
+  <header id="header" class="header d-flex align-items-center ">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
         <a href="index.html" class="logo d-flex align-items-center">
@@ -977,7 +977,7 @@ ul li {
             <div class="container">
                 <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
                     <div class="col-lg-6 text-center">
-                        <h2>Bem-vindo ao UpConstruction</h2>
+                        <h2>Encontre sua paz interior</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         <a href="#get-started" class="btn-get-started">Comece Agora</a>
                     </div>
